# scmanager-windows-rs

./: Cargo.toml  README.md
src/: common.rs  error.rs  lib.rs  service.rs  service_manager.rs  test.rs
