[package]
name = "scmanager-windows-rs"
version = "0.1.0"
edition = "2021"
authors = ["IE <leftspace89@users.noreply.github.com>"]
description = "windows service manager"
license = "Apache-2.0"
repository = "https://github.com/leftspace89/scmanager-windows-rs"
categories = ["os::windows-apis"]
documentation = "https://docs.rs/scmanager-windows-rs"
readme = "README.md"

[dependencies]
widestring = "1.1.0"
thiserror = "1.0.61"
defer-lite = "1.0.0"
anyhow = { version = "1.0.86", features = ["backtrace"], optional = true }


[dependencies.windows-sys]
version = "0.52.0"
features = [
    "Win32",
    "Win32_System",
    "Win32_System_Services",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
]


[features]
default = []
tests = ["dep:anyhow"]
